# cmake-example

./: .gitignore  .gitmodules  CMakeLists.txt  config.hpp.in
lib/: Man.cpp  Man.hpp  Person.cpp  Person.hpp
src/: Person.hpp  dummy.c  dummy.h  main.cpp
t/: runner.cpp  test_man.cpp  test_person.cpp
