CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (person)

SET (VERSION_MAJOR 1)
SET (VERSION_MINOR 0)

CONFIGURE_FILE ("${PROJECT_SOURCE_DIR}/config.hpp.in" "${PROJECT_BINARY_DIR}/config.hpp")

# overwrite MY_PREFIX by `cmake -DMY_PREFIX=foo .`
if (NOT DEFINED MY_PREFIX)
  SET (MY_PREFIX "$ENV{HOME}/local")
endif ()
INCLUDE_DIRECTORIES ("${MY_PREFIX}/include")
SET (CMAKE_LIBRARY_PATH "${MY_PREFIX}/lib")

FILE (GLOB SRCS src/*.cpp src/*.c)

SET (WARNING_FLAGS "-Wall -Wextra -Werror")
SET (CMAKE_C_FLAGS   "-O2 -g ${WARNING_FLAGS} ${CMAKE_C_FLAGS}")
SET (CMAKE_CXX_FLAGS "-O2 -g ${WARNING_FLAGS} ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE (main ${SRCS})

# example of linking library
FIND_LIBRARY (ATS_LIBRARY atscppapi REQUIRED)
TARGET_LINK_LIBRARIES (main ${ATS_LIBRARY})
